Fixed dbscan silhouette score and number of clusters code

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -1505,11 +1505,11 @@
         "print(f\"K-Means SSE: {sse_kmeans}\")"
       ],
       "metadata": {
-        "id": "y9As1uCIxnYJ",
-        "outputId": "064a5247-7fe7-43f4-e260-1ea7821593b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y9As1uCIxnYJ",
+        "outputId": "064a5247-7fe7-43f4-e260-1ea7821593b8"
       },
       "id": "y9As1uCIxnYJ",
       "execution_count": 39,
@@ -1547,12 +1547,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "ReT9b5FP0yv_",
-        "outputId": "cbfa1cf3-07dd-4a0a-ab6a-0715ddcbe3e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "ReT9b5FP0yv_",
+        "outputId": "cbfa1cf3-07dd-4a0a-ab6a-0715ddcbe3e7"
       },
       "id": "ReT9b5FP0yv_",
       "execution_count": 41,
@@ -1592,10 +1592,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pTQl6XP0RqJg",
-        "outputId": "ab444d31-c360-47a7-9b43-b588d1fb08de"
+        "outputId": "cd292c0a-1bf7-47ef-938b-421122140d8b"
       },
       "id": "pTQl6XP0RqJg",
-      "execution_count": 30,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -1609,9 +1609,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Silhouette score can be computed only if there's more than 1 cluster excluding noise\n",
-        "if n_clusters_dbscan > 1:\n",
-        "    mask = dbscan_labels != -1  # Exclude noise points for silhouette calculation\n",
+        "# Calculate silhouette score for DBSCAN (excluding noise points)\n",
+        "# Noise points are labeled as -1\n",
+        "core_samples_mask = np.zeros_like(dbscan.labels_, dtype=bool)\n",
+        "core_samples_mask[dbscan.core_sample_indices_] = True\n",
+        "dbscan_labels = dbscan.labels_\n",
+        "\n",
+        "# Number of clusters in labels, ignoring noise if present.\n",
+        "n_clusters_ = len(set(dbscan_labels)) - (1 if -1 in dbscan_labels else 0)\n",
+        "n_noise_ = list(dbscan_labels).count(-1)\n",
+        "\n",
+        "print('Estimated number of clusters: %d' % n_clusters_)\n",
+        "print('Estimated number of noise points: %d' % n_noise_)\n",
+        "\n",
+        "# Calculate silhouette score if possible (requires at least 2 clusters and no noise)\n",
+        "# Filter out noise points (-1) for silhouette score calculation\n",
+        "mask = dbscan_labels != -1\n",
+        "if n_clusters_ > 1:\n",
         "    silhouette_dbscan = silhouette_score(X_scaled[mask], dbscan_labels[mask])\n",
         "    print(f\"DBSCAN silhouette score (excluding noise): {silhouette_dbscan:.3f}\")\n",
         "else:\n",
@@ -1622,18 +1636,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dW3STsz5SAF3",
-        "outputId": "bffb1cb1-8889-4b97-d3d1-e0462b1de3e8"
+        "outputId": "db43516e-4705-47e9-d1db-5f50f7b1da27"
       },
       "id": "dW3STsz5SAF3",
-      "execution_count": 32,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estimated number of clusters: 266\n",
-            "Estimated number of noise points: 56614\n",
-            "DBSCAN silhouette score (excluding noise): 0.080\n"
+            "Estimated number of clusters: 262\n",
+            "Estimated number of noise points: 56485\n",
+            "DBSCAN silhouette score (excluding noise): 0.066\n"
           ]
         }
       ]
