Updated file paths to use GitHub file paths.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "45fe0020-62b8-4b59-a26b-762c409d7b29",
       "metadata": {
         "id": "45fe0020-62b8-4b59-a26b-762c409d7b29"
@@ -46,25 +46,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tU7kJS_9bQqO",
-        "outputId": "4381a36d-58d7-43f9-9e9c-8ade6768fa14"
+        "outputId": "bf67603a-e09f-4643-d5be-a9e8c222c4d4"
       },
       "id": "tU7kJS_9bQqO",
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-10 05:32:10--  https://github.com/vxdao01/504/tree/modeling/census-income\n",
+            "--2025-08-12 01:35:32--  https://github.com/vxdao01/504/tree/modeling/census-income\n",
             "Resolving github.com (github.com)... 140.82.113.3\n",
             "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: unspecified [text/html]\n",
             "Saving to: ‘census-income’\n",
             "\n",
-            "census-income           [ <=>                ] 175.96K   993KB/s    in 0.2s    \n",
+            "census-income           [ <=>                ] 175.76K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-08-10 05:32:10 (993 KB/s) - ‘census-income’ saved [180183]\n",
+            "2025-08-12 01:35:32 (1.79 MB/s) - ‘census-income’ saved [179980]\n",
             "\n"
           ]
         }
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uz6lJV7VpK9L",
-        "outputId": "d2d8dfd6-d8d1-4dc0-c99e-3708ad1b3aac"
+        "outputId": "07489bee-2124-4272-adf3-221822a162f2"
       },
       "id": "Uz6lJV7VpK9L",
       "execution_count": 3,
@@ -100,12 +100,12 @@
             "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n",
             "Git LFS initialized.\n",
             "Cloning into '504'...\n",
-            "remote: Enumerating objects: 119, done.\u001b[K\n",
-            "remote: Counting objects: 100% (119/119), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (104/104), done.\u001b[K\n",
-            "remote: Total 119 (delta 62), reused 34 (delta 13), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (119/119), 2.13 MiB | 11.20 MiB/s, done.\n",
-            "Resolving deltas: 100% (62/62), done.\n",
+            "remote: Enumerating objects: 127, done.\u001b[K\n",
+            "remote: Counting objects: 100% (127/127), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (112/112), done.\u001b[K\n",
+            "remote: Total 127 (delta 68), reused 34 (delta 13), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (127/127), 2.18 MiB | 9.50 MiB/s, done.\n",
+            "Resolving deltas: 100% (68/68), done.\n",
             "/content/504\n"
           ]
         }
@@ -114,7 +114,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git checkout modeling"
+        "#!git checkout modeling"
       ],
       "metadata": {
         "colab": {
@@ -124,7 +124,7 @@
         "outputId": "24fc5d84-c681-436e-f50e-dfe2bf5ba8cf"
       },
       "id": "05clyzHYq792",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,8 +139,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# !pwd\n",
-        "!ls\n",
+        "#!pwd\n",
+        "#!ls\n",
         "# os.chdir('/content/drive/My Drive/Colab Notebooks/ADS-504-Final-Project')"
       ],
       "metadata": {
@@ -148,17 +148,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f3c198e1-1220-474c-a983-6d5f55c81a7b"
+        "outputId": "36bf08cc-efa2-4a2e-f0c9-f80189729b08"
       },
       "id": "8Er234YSlLGG",
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "504-final-project.ipynb  census+income.zip  final-edit-cv.ipynb\n",
-            "census-income\t\t csv_pca\t    final-edit.ipynb\n"
+            "504-final-project.ipynb  csv_pca\t      final_project_report_APA7.docx\n",
+            "census-income\t\t final-edit-cv.ipynb\n",
+            "census+income.zip\t final-edit.ipynb\n"
           ]
         }
       ]
@@ -167,8 +168,8 @@
       "cell_type": "code",
       "source": [
         "# === NEW GOOGLE COLAB FILE PATHS ===\n",
-        "train_path = \"/content/drive/My Drive/Colab Notebooks/ADS-504-Final-Project/adult.data\"\n",
-        "test_path = \"/content/drive/My Drive/Colab Notebooks/ADS-504-Final-Project/adult.test\"\n",
+        "train_path = \"/content/504/census-income/adult.data\"\n",
+        "test_path = \"/content//504/census-income/adult.test\"\n",
         "\n",
         "# === FILE PATHS ===\n",
         "# train_path = r\"C:\\Users\\User\\Downloads\\census+income\\adult.data\"\n",
@@ -178,7 +179,7 @@
         "id": "UePz9o0-mDSI"
       },
       "id": "UePz9o0-mDSI",
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -327,7 +328,7 @@
         "id": "LXp-4ldxeFnS"
       },
       "id": "LXp-4ldxeFnS",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,7 +344,7 @@
         "outputId": "e6922e43-cb8b-4379-dd72-2834c26cc721"
       },
       "id": "v53o0HqJnozJ",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +390,7 @@
         "outputId": "4dbd06b0-33ce-443d-b474-e320db4a5315"
       },
       "id": "MAxf9V98tlrC",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +429,7 @@
         "id": "AawoEPFSr3qo"
       },
       "id": "AawoEPFSr3qo",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +442,7 @@
         "id": "zph5ahZMufo5"
       },
       "id": "zph5ahZMufo5",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +464,7 @@
         "outputId": "78e5fabe-1109-415d-be80-b03a7f5074fd"
       },
       "id": "cbpvjACYx9Wo",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -795,7 +796,7 @@
         "outputId": "47d51e86-fc66-4fc6-ab57-b6c3fc667a12"
       },
       "id": "55MC2v6s0OpB",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -824,7 +825,7 @@
         "outputId": "71ed29fb-42a1-4291-f8d2-eeacd51feb87"
       },
       "id": "ANZgChPE0ptx",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,7 +878,7 @@
         "outputId": "1c4d3e9d-4e7b-4e33-93d1-5d73a36fd6b5"
       },
       "id": "dKCAm6fb3Mnt",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,7 +907,7 @@
         "outputId": "125266cd-9284-4b4c-c031-7b42985a81e9"
       },
       "id": "9XCfohsGP5wo",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +928,7 @@
         "id": "Tp8seoYb0AmZ"
       },
       "id": "Tp8seoYb0AmZ",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -953,7 +954,7 @@
         "outputId": "78e00b17-807d-4c52-f74e-ecdec66236b6"
       },
       "id": "w-5wkErc_d2J",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +989,7 @@
         "outputId": "5baa6688-7f9b-4af9-d2b9-beae471ce2f9"
       },
       "id": "G3H2ytcQ09tM",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1018,7 +1019,7 @@
         "outputId": "30c7ea5c-26cd-4f82-a8ac-f9a0907ec931"
       },
       "id": "k3CmmCTQ2uhf",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1051,7 @@
         "id": "HNUPITMrLPQu"
       },
       "id": "HNUPITMrLPQu",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1073,7 @@
         "outputId": "62fcd8af-5058-4654-d3b2-1c45b36896e2"
       },
       "id": "q_PLwBG_8_CS",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1116,7 +1117,7 @@
         "outputId": "16a8f4d1-7817-4e05-b4f7-2ed8536c6a65"
       },
       "id": "E5izzgdZCn2e",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1473,7 +1474,7 @@
         "outputId": "55e6f195-ac0c-442f-9780-fa8728521a33"
       },
       "id": "wrysV7o1NkvF",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1512,7 +1513,7 @@
         "outputId": "064a5247-7fe7-43f4-e260-1ea7821593b8"
       },
       "id": "y9As1uCIxnYJ",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1555,7 +1556,7 @@
         "outputId": "cbfa1cf3-07dd-4a0a-ab6a-0715ddcbe3e7"
       },
       "id": "ReT9b5FP0yv_",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1595,7 +1596,7 @@
         "outputId": "cd292c0a-1bf7-47ef-938b-421122140d8b"
       },
       "id": "pTQl6XP0RqJg",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1639,7 +1640,7 @@
         "outputId": "db43516e-4705-47e9-d1db-5f50f7b1da27"
       },
       "id": "dW3STsz5SAF3",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
