Added instructions in another section for how to save file.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -184,14 +184,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "71e2dc81-b244-44b9-a050-eb8722b0017d",
       "metadata": {
         "id": "71e2dc81-b244-44b9-a050-eb8722b0017d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca5ca057-7bf2-4b83-c71b-68aa735bc622"
+        "outputId": "43eeed9d-62bc-4d30-a716-6995ae2df8eb"
       },
       "outputs": [
         {
@@ -328,7 +328,7 @@
         "id": "LXp-4ldxeFnS"
       },
       "id": "LXp-4ldxeFnS",
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -341,10 +341,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v53o0HqJnozJ",
-        "outputId": "e6922e43-cb8b-4379-dd72-2834c26cc721"
+        "outputId": "0cc56db8-c33a-4827-dd45-8efef1f65d0f"
       },
       "id": "v53o0HqJnozJ",
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,10 +387,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MAxf9V98tlrC",
-        "outputId": "4dbd06b0-33ce-443d-b474-e320db4a5315"
+        "outputId": "510c7167-2e3c-45b4-f792-0f4d1301e27a"
       },
       "id": "MAxf9V98tlrC",
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
         "id": "AawoEPFSr3qo"
       },
       "id": "AawoEPFSr3qo",
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -442,7 +442,7 @@
         "id": "zph5ahZMufo5"
       },
       "id": "zph5ahZMufo5",
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -461,10 +461,10 @@
           "height": 300
         },
         "id": "cbpvjACYx9Wo",
-        "outputId": "78e5fabe-1109-415d-be80-b03a7f5074fd"
+        "outputId": "3295e274-b47b-499e-e65a-d32c0441a5bf"
       },
       "id": "cbpvjACYx9Wo",
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -482,7 +482,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fa049edc-ce51-4a38-97d7-cc0928368fa2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b1fa4e66-0e26-438a-a0b7-bf84b73678a3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -561,7 +561,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa049edc-ce51-4a38-97d7-cc0928368fa2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b1fa4e66-0e26-438a-a0b7-bf84b73678a3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -613,12 +613,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fa049edc-ce51-4a38-97d7-cc0928368fa2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b1fa4e66-0e26-438a-a0b7-bf84b73678a3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fa049edc-ce51-4a38-97d7-cc0928368fa2');\n",
+              "        const element = document.querySelector('#df-b1fa4e66-0e26-438a-a0b7-bf84b73678a3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -638,8 +638,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c55c1db4-26a4-4f1f-a8b1-362d2e2c977f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c55c1db4-26a4-4f1f-a8b1-362d2e2c977f')\"\n",
+              "    <div id=\"df-731e765f-9565-4f91-a0f7-e33a4306214b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-731e765f-9565-4f91-a0f7-e33a4306214b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -758,7 +758,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c55c1db4-26a4-4f1f-a8b1-362d2e2c977f button');\n",
+              "            document.querySelector('#df-731e765f-9565-4f91-a0f7-e33a4306214b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -793,10 +793,10 @@
           "height": 545
         },
         "id": "55MC2v6s0OpB",
-        "outputId": "47d51e86-fc66-4fc6-ab57-b6c3fc667a12"
+        "outputId": "1dbc48de-0c79-493a-8647-5538c7d6855c"
       },
       "id": "55MC2v6s0OpB",
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -822,10 +822,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ANZgChPE0ptx",
-        "outputId": "71ed29fb-42a1-4291-f8d2-eeacd51feb87"
+        "outputId": "d25ae7f1-a647-4317-b156-f613dd83a9a4"
       },
       "id": "ANZgChPE0ptx",
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -875,10 +875,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dKCAm6fb3Mnt",
-        "outputId": "1c4d3e9d-4e7b-4e33-93d1-5d73a36fd6b5"
+        "outputId": "954477f5-c98f-451c-e6cd-fb4ab672a350"
       },
       "id": "dKCAm6fb3Mnt",
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,10 +904,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9XCfohsGP5wo",
-        "outputId": "125266cd-9284-4b4c-c031-7b42985a81e9"
+        "outputId": "9b673d6c-3f5d-4fa8-9e8e-18aa38230b4f"
       },
       "id": "9XCfohsGP5wo",
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,7 +928,7 @@
         "id": "Tp8seoYb0AmZ"
       },
       "id": "Tp8seoYb0AmZ",
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -951,10 +951,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w-5wkErc_d2J",
-        "outputId": "78e00b17-807d-4c52-f74e-ecdec66236b6"
+        "outputId": "03a36e6d-00a5-49b6-b846-7e5a27145ca8"
       },
       "id": "w-5wkErc_d2J",
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,10 +986,10 @@
           "height": 545
         },
         "id": "G3H2ytcQ09tM",
-        "outputId": "5baa6688-7f9b-4af9-d2b9-beae471ce2f9"
+        "outputId": "a7f4c736-2ad6-4b86-9389-983f9b2b3719"
       },
       "id": "G3H2ytcQ09tM",
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1016,10 +1016,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k3CmmCTQ2uhf",
-        "outputId": "30c7ea5c-26cd-4f82-a8ac-f9a0907ec931"
+        "outputId": "43ca56b8-a93f-4420-d350-0701ac2e1a13"
       },
       "id": "k3CmmCTQ2uhf",
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1051,7 @@
         "id": "HNUPITMrLPQu"
       },
       "id": "HNUPITMrLPQu",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1070,10 +1070,10 @@
           "height": 545
         },
         "id": "q_PLwBG_8_CS",
-        "outputId": "62fcd8af-5058-4654-d3b2-1c45b36896e2"
+        "outputId": "f12d7510-ea60-4889-a951-99fb27bb0ee3"
       },
       "id": "q_PLwBG_8_CS",
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1114,10 +1114,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E5izzgdZCn2e",
-        "outputId": "16a8f4d1-7817-4e05-b4f7-2ed8536c6a65"
+        "outputId": "3ac10064-f39e-4f33-c2ed-554888ecd22a"
       },
       "id": "E5izzgdZCn2e",
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,6 +1132,7 @@
       "cell_type": "code",
       "source": [
         "# Save cleaned raw dataset\n",
+        "# Update to use your local file path\n",
         "# df.to_csv(r\"C:\\Users\\User\\Downloads\\census+income\\cleaned_raw_full.csv\", index=False)\n",
         "df.to_csv(r\"C:\\Users\\celin\\OneDrive\\Education\\USD-MS-ADS\\ADS-504\\Final-Project\\cleaned_raw_full.csv\", index=False)"
       ],
@@ -1139,7 +1140,7 @@
         "id": "T-OySNvRZ8YT"
       },
       "id": "T-OySNvRZ8YT",
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1178,9 +1179,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "998ad6c1-51e2-4471-dbc1-d748811c1d8f"
+        "outputId": "47e0f840-c185-454d-f5da-655f24fa18a6"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1240,13 +1241,14 @@
         "id": "vsaC3wZFdCbQ"
       },
       "id": "vsaC3wZFdCbQ",
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Save modeling-ready dataset\n",
+        "# Update file path for your local machine\n",
         "# df_encoded.to_csv(r\"C:\\Users\\User\\Downloads\\census+income\\cleaned_data_encoded_scaled.csv\", index=False)\n",
         "df_encoded.to_csv(r\"C:\\Users\\celin\\OneDrive\\Education\\USD-MS-ADS\\ADS-504\\Final-Project\\cleaned_raw_full.csv\", index=False)"
       ],
@@ -1254,7 +1256,7 @@
         "id": "wNEXMHcNbBwf"
       },
       "id": "wNEXMHcNbBwf",
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
